<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="android.text.TextUtils" />

        <import type="com.cgkim.jobplanet.extension.ExtensionKt" />

        <variable
            name="company"
            type="com.cgkim.jobplanet.model.CellTypeCompany" />

        <variable
            name="handler"
            type="com.cgkim.jobplanet.extension.ClickHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--        <ImageView-->
        <!--            android:id="@+id/logo_path"-->
        <!--            android:layout_width="64dp"-->
        <!--            android:layout_height="64dp"-->
        <!--            android:layout_margin="8dp"-->
        <!--            app:layout_constraintBottom_toTopOf="@+id/divider"-->
        <!--            app:layout_constraintEnd_toStartOf="@+id/name"-->
        <!--            app:layout_constraintHorizontal_bias="0.5"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent"-->
        <!--            bind:imageUrl="@{company.logo_path}"-->
        <!--            tools:ignore="ContentDescription"-->
        <!--            tools:srcCompat="@tools:sample/avatars" />-->

        <!--        <TextView-->
        <!--            android:id="@+id/name"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="4dp"-->
        <!--            android:layout_marginLeft="4dp"-->
        <!--            android:layout_marginEnd="8dp"-->
        <!--            android:layout_marginRight="8dp"-->
        <!--            android:text="@{company.name}"-->
        <!--            android:textColor="@color/black"-->
        <!--            android:textSize="18sp"-->
        <!--            android:textStyle="bold"-->
        <!--            app:layout_constraintBottom_toTopOf="@+id/rate_total_avg"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintHorizontal_bias="0.5"-->
        <!--            app:layout_constraintStart_toEndOf="@+id/logo_path"-->
        <!--            app:layout_constraintTop_toTopOf="parent" />-->

        <!--        <TextView-->
        <!--            android:id="@+id/rate_total_avg"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="@{Float.toString(company.rate_total_avg)}"-->
        <!--            android:textColor="@color/yellow"-->
        <!--            app:layout_constraintBottom_toTopOf="@+id/divider"-->
        <!--            app:layout_constraintStart_toStartOf="@+id/name"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/name"-->
        <!--            tools:text="1.0" />-->

        <!--        <TextView-->
        <!--            android:id="@+id/industry_name"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="8dp"-->
        <!--            android:layout_marginLeft="8dp"-->
        <!--            android:text="@{company.industry_name}"-->
        <!--            android:textColor="@android:color/darker_gray"-->
        <!--            app:layout_constraintBottom_toBottomOf="@+id/rate_total_avg"-->
        <!--            app:layout_constraintEnd_toEndOf="@+id/name"-->
        <!--            app:layout_constraintStart_toEndOf="@+id/rate_total_avg"-->
        <!--            app:layout_constraintTop_toTopOf="@+id/rate_total_avg" />-->

        <!--        <View-->
        <!--            android:id="@+id/divider"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="1dp"-->
        <!--            android:layout_marginTop="8dp"-->
        <!--            android:background="?android:attr/listDivider"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintHorizontal_bias="0.5"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/logo_path" />-->

        <include
            layout="@layout/cell_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            bind:industryName="@{company.industry_name}"
            bind:logoPath="@{company.logo_path}"
            bind:name="@{company.name}"
            bind:rateTotalAvg="@{String.valueOf(company.rate_total_avg)}" />

        <TextView
            android:id="@+id/review_summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@{company.review_summary}"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:visibility="@{!TextUtils.isEmpty(company.review_summary) ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            tools:text="@string/dummy_text"
            tools:visibility="gone" />


        <TextView
            android:id="@+id/salary_avg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:bufferType="spannable"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/review_summary"
            bind:salary_text="@{company.salary_avg}"
            tools:text="@string/salary_avg" />

        <TextView
            android:id="@+id/interview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/interview_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/salary_avg" />

        <TextView
            android:id="@+id/inteview_question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@{company.interview_question}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/interview_title"
            app:layout_constraintTop_toBottomOf="@+id/interview_title" />

        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inteview_question" />

        <include
            layout="@layout/item_bottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2"
            bind:company="@{company}"
            bind:handler="@{handler}" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>